# google-reviews-analyzer

./: .env.template  .gitignore  .pre-commit-config.yaml  Makefile  README.md  data.dvc  params.yaml  pyproject.toml
.dvc/: config
google_reviews_analyzer/: paths.py  utils.py
google_reviews_analyzer/data_process/: place_reviews.py
google_reviews_analyzer/openai_place_summary/: main.py  openai_chat.py  utils.py
